--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.16.0",
+    "@aws-sdk/client-s3": "^3.16.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.16.0",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,11 +15,13 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.9",
+    "@types/uuid": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
