--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-sdk/client-cognito-identity": "^3.16.0",
     "@aws-sdk/client-s3": "^3.16.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.16.0",
+    "@aws-sdk/lib-storage": "^3.16.0",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
