--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.26.0",
     "eslint-plugin-jest": "^24.3.5",
     "eslint-plugin-react": "^7.23.2",
     "prettier": "^2.2.1"
