--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@aws-sdk/client-cognito-identity": "^3.16.0",
     "@aws-sdk/client-s3": "^3.16.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.16.0",
+    "@aws-sdk/hash-node": "^3.15.0",
     "@aws-sdk/lib-storage": "^3.16.0",
+    "@aws-sdk/protocol-http": "^3.15.0",
+    "@aws-sdk/s3-request-presigner": "^3.16.0",
+    "@aws-sdk/url-parser": "^3.15.0",
+    "@aws-sdk/util-format-url": "^3.15.0",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
