--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.26.0",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jest": "^24.3.5",
     "eslint-plugin-react": "^7.23.2",
     "prettier": "^2.2.1"
